--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,12 +16,12 @@
                 <li routerLinkActive="active"><a [routerLink]="['/shopping-list']">Shopping List</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown" appDropdown>
-                    <a href="#" class="dropdown-toggle">Manage <span class="caret"></span></a>
+                <li style="cursor: pointer;" class="dropdown" appDropdown>
+                    <a class="dropdown-toggle">Manage <span class="caret"></span></a>
                     
                     <ul class="dropdown-menu" role="button">
-                        <li><a href="#">Save Data</a></li>
-                        <li><a href="#">Fetch Data</a></li>
+                        <li><a style="cursor: pointer;">Save Data</a></li>
+                        <li><a style="cursor: pointer;">Fetch Data</a></li>
                     </ul>
                     
                 </li>
